--- a/requirements.txt
+++ b/requirements.txt
@@ -25,13 +25,17 @@ gpustat==1.1.1
 grpcio==1.60.0
 h11==0.14.0
 httptools==0.6.1
+huggingface-hub==0.19.4
 humanfriendly==10.0
 idna==3.6
+Jinja2==3.1.2
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.2
+MarkupSafe==2.1.3
 mpmath==1.3.0
 msgpack==1.0.7
 multidict==6.0.4
+networkx==3.2.1
 numpy==1.26.2
 nvidia-ml-py==12.535.133
 onnxruntime==1.16.3
@@ -54,15 +58,21 @@ pytz==2023.3.post1
 PyYAML==6.0.1
 ray==2.8.1
 referencing==0.32.0
+regex==2023.10.3
 requests==2.31.0
 rpds-py==0.15.2
 rsa==4.9
+safetensors==0.4.1
 six==1.16.0
 smart-open==6.4.0
 sniffio==1.3.0
 starlette==0.27.0
 sympy==1.12
 tensorboardX==2.6.2.2
+tokenizers==0.15.0
+torch==2.1.2
+tqdm==4.66.1
+transformers==4.36.2
 typing_extensions==4.9.0
 tzdata==2023.3
 urllib3==2.1.0
